log
Tue 02 May 2023 11:04:59 PM UTC: 
 tests:  0|5
total_score: 0/70
298ec88
Thu 04 May 2023 04:42:29 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c:66:7: error: redefinition of ‘get_adj_nodes’
   66 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
Compilation failed
442cc85
Thu 04 May 2023 04:42:47 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c:67:7: error: redefinition of ‘get_adj_nodes’
   67 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
f80040e
Thu 04 May 2023 04:42:56 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c:67:7: error: redefinition of ‘get_adj_nodes’
   67 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
Compilation failed
2104878
Thu 04 May 2023 04:45:01 PM UTC: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 0/70
f56eb8c
Thu 04 May 2023 05:07:51 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:27: error: expected ‘;’ before ‘j’
   57 |         for (j = 0 ; j < 9 j++)
      |                           ^~
      |                           ;
Compilation failed
bf12fdb
Thu 04 May 2023 05:08:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b54d2d7
Thu 04 May 2023 05:10:33 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:17: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   75 |                 if(entro != 1)
      |                 ^~
sudoku.c:77:21: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   77 |                     pushFront(list,adj);
      |                     ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9b91384
Thu 04 May 2023 05:11:00 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ebc5ef3
Thu 04 May 2023 05:12:26 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
cd702a5
Thu 04 May 2023 05:13:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f31c3fd
